smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/trait-name-syntax.smithy
// Syntax error at line 4, column 10: Expected IDENTIFIER but found POUND('#') | Model
namespace foo.bar

@invalid##foo..bar
string MyString
